@startuml
title Concurrencia: maestro, trabajadores y ejecución monohilo

package "Concurrencia" {

  class MonoHilo extends Thread {
    - estaciones : Estacion[]
    - filtroDatos : FiltroDatos
    - resultados : RenglonDatos[]
    --
    + MonoHilo(Estacion[], FiltroDatos)
    + run() : void
    + getResultados() : RenglonDatos[]
  }

  class Maestro extends Thread {
    - trabajadores : Trabajador[]
    - resultados : RenglonDatos[]
    --
    + Maestro(Estacion[], FiltroDatos)
    + run() : void
    + getResultados() : RenglonDatos[]
  }

  class Trabajador extends Thread {
    - estaciones : Estacion[]
    - filtroDatos : FiltroDatos
    - renglonesLimpios : RenglonDatos[]
    --
    + Trabajador(Estacion[], FiltroDatos)
    + run() : void
    + getRenglones() : RenglonDatos[]
  }

}

' Reutilizamos las clases de modelo para que se entienda el contexto
class Estacion
class FiltroDatos
class RenglonDatos
class AnalizadorEstacion

Maestro "1" *-- "many" Trabajador
Maestro --> Estacion
Maestro --> FiltroDatos
Maestro --> RenglonDatos

Trabajador --> Estacion
Trabajador --> FiltroDatos
Trabajador --> RenglonDatos
Trabajador --> AnalizadorEstacion

MonoHilo --> Estacion
MonoHilo --> FiltroDatos
MonoHilo --> RenglonDatos
MonoHilo --> AnalizadorEstacion

@enduml
